--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "bootstrap": "^4.5.0",
+    "heroku": "^7.47.3",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
     "tilt.js": "^1.2.1"
